# dqn-navigation

./: .gitignore  README.md
turtlebot3_machine_learning/: CMakeLists.txt  package.xml
turtlebot3_machine_learning/turtlebot3_dqn/: CMakeLists.txt
turtlebot3_machine_learning/turtlebot3_dqn/launch/: costmap.launch
turtlebot3_machine_learning/turtlebot3_dqn/map/: 1AI2020.yaml  a.ipynb
turtlebot3_machine_learning/turtlebot3_dqn/nodes/: SumTree.py  action_graph  dqnAgent.py  dqn_node.py  rainbow_dqn.py  turtlebot3_dqn_stage_1  turtlebot3_dqn_stage_2
turtlebot3_machine_learning/turtlebot3_dqn/save_model/: loss_plot.py  stage_1_100target.pth  stage_1_120target.pth  stage_1_140.pth  stage_1_160.pth  stage_1_160target.pth  stage_1_180.pth  stage_1_180target.pth  stage_1_20.pth  stage_1_200target.pth  stage_1_20target.pth  stage_1_220target.pth  stage_1_240.pth  stage_1_260.pth  stage_1_260target.pth  stage_1_280.pth  stage_1_280target.pth  stage_1_300target.pth  stage_1_320.pth  stage_1_340target.pth  stage_1_360target.pth  stage_1_40.pth  stage_1_400target.pth  stage_1_40target.pth  stage_1_440.pth  stage_1_440target.pth  stage_1_500.pth  stage_1_500target.pth  stage_1_520.pth  stage_1_520target.pth  stage_1_540.pth  stage_1_60target.pth  stage_1_80target.pth
turtlebot3_machine_learning/turtlebot3_dqn/src/turtlebot3_dqn/: environment_stage_1.py  respawnGoal.py
turtlebot3_machine_learning/turtlebot3_machine_learning/scripts/: data_generation.py  dataset_analysis.py  environment_icra.py  respawnGoal.py  未命名.ipynb
turtlebot3_machine_learning/turtlebot3_td3/: analyze.ipynb  analyze.py  visualize.ipynb
turtlebot3_machine_learning/turtlebot3_td3/Env/: environment_icra.py  environment_stage_2.py  environment_stage_2_Pathreward.py  respawnGoal.py
turtlebot3_machine_learning/turtlebot3_td3/TD3/: PER.py  TD3.py  TD3_navigation.py  test.py  train.py  utils.py  未命名.ipynb
turtlebot3_machine_learning/turtlebot3_td3/TD3/.ipynb_checkpoints/: 未命名-checkpoint.ipynb
turtlebot3_machine_learning/turtlebot3_td3/basic_models/: TD3_stage1_actor.pth  TD3_stage1_actor_target.pth  TD3_stage1_critic_1_target.pth  TD3_stage1_critic_2_target.pth  TD3_stage1_crtic_1.pth  TD3_stage1_crtic_2.pth
turtlebot3_machine_learning/turtlebot3_td3/launch/: A*td3.launch  result.launch  td3.launch  td3_icra.launch  td3_navigation.launch  td3_test.launch
turtlebot3_machine_learning/turtlebot3_td3/models/: TD3_stage2_actor.pth  TD3_stage2_actor_target.pth  TD3_stage2_critic_1_target.pth  TD3_stage2_critic_2_target.pth  TD3_stage2_crtic_1.pth  TD3_stage2_crtic_2.pth
turtlebot3_machine_learning/turtlebot3_td3/models1229/: TD3_stage2_actor.pth  TD3_stage2_actor_target.pth  TD3_stage2_critic_1_target.pth  TD3_stage2_critic_2_target.pth  TD3_stage2_crtic_1.pth  TD3_stage2_crtic_2.pth
turtlebot3_machine_learning/turtlebot3_td3/steer_only/: result
turtlebot3_machine_learning/turtlebot3_td3/visualize/: action_graph
(+275 files in other folders)
