<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_td3</name>
  <version>1.0.0</version>
  <description>
    The turtlebot3_dqn package includes applications using reinforcement learning with TD3.
  </description>
  <license>Apache 2.0</license>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_machine_learning</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
